fixed scrollbars showing after code is collapsed & made sleep block work

--- a/src/components/VisualEditor/VisualEditor.scss
+++ b/src/components/VisualEditor/VisualEditor.scss
@@ -48,6 +48,7 @@
   transition-duration: 0.3s;
 
   &.collapsed {
+    overflow: hidden;
     width: 0;
   }
 }
